lcs-spip (2.4.7.1) Lcs; urgency=low

  * Fix bug in right column position
  * Remove dependency on "boucles_sans_tables" 
  * Change logo

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 15:01:23 +0200

lcs-spip (2.4.7) Lcs; urgency=low

  * Update spip 2.0.12

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 02 Sep 2010 12:30:58 +0200

lcs-spip (2.4.6) Lcs; urgency=low

  [ Jean Luc Chretien & Dominique Lepaisant ]
  * Update spip 2-0-10
  * Release lcs skel with TiSpip and add Chistel header
  * Correct spip_session_lcs.php for spip 2.0.10
  * Add php5-xls dependence
  * Clean embedded html documentation
  * Clean old lcs skel folder
  * Change owner on plugin folder
  * Cleaning changelog

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 04 Feb 2010 14:14:31 +0100

lcs-spip (2.4.1) Lcs; urgency=low
  [ Jean-Luc Chretien  ]
  * Build a stable release 2.4.1 for spip update1.9.2h to 1.9.2i
  *  Update 1.9.2h to 1.9.2i

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Tue, 11 Aug 2009 11:59:38 +0200

lcs-spip (2.4) Lcs; urgency=low
  [ Jean-Luc Chretien  ]
  * Build a stable release 2.4 
  * Modify spip_session_lcs.php for register global

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 28 May 2009 15:35:23 +0200

lcs-spip (2.1-3) Lcs; urgency=low
  [ Jean-Luc Chretien  ]
  * make a working release
  * Add .htacess in tmp
  * Update 1.9.2g to 1.9.2h

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Mon, 27 Apr 2009 15:58:41 +0200

lcs-spip (2.1-2) LcsXP; urgency=low
  [ Jean-Luc Chretien  ]
      * Update spip 1.9.2c to 1.9.2g

 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Tue, 30 Dec 2008 16:36:15 +0100

lcs-spip (2.1-1) UNRELEASED; urgency=low
  [ Jean-Luc Chretien  ]
    * Correct test apache2 config in postinst
    * Correct close_session in spip_session.php
    * Cleaning unnecessary files and folders in lcs-spip package