@@ -1,0 +1,18 @@
+#CACHE{0}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="#LANG">
+<head>
+<title>#NOM_SITE_SPIP</title>
+</head>
+<body>
+<div id="notify_container">
+<BOUCLE_lcs_notify(ARTICLES){!par date}{0,1}>
+<h3>#TITRE</h3>
+<p>#INTRODUCTION</p>
+<span style="float:right;">>> Lire la suite...</span>
+<br style="clear:both;" />
+<span class="spip_id_article" style="display:none">#ID_ARTICLE</span>
+</BOUCLE_lcs_notify>
+</div>
+</body>
+</html>
